<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.atamanroman</groupId>
  <artifactId>hearts</artifactId>
  <version>1.0-SNAPSHOT</version>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>14</release>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <shadedArtifactAttached>false</shadedArtifactAttached>
              <transformers>
                <transformer implementation=
                               "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.github.atamanroman.hearts.infra.Application</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- does not work with JDK 14 yet -->
<!--      <plugin>-->
<!--        <groupId>com.cosium.code</groupId>-->
<!--        <artifactId>git-code-format-maven-plugin</artifactId>-->
<!--        <version>2.5</version>-->
<!--        <executions>-->
<!--          &lt;!&ndash; On commit, format the modified java files &ndash;&gt;-->
<!--          <execution>-->
<!--            <id>install-formatter-hook</id>-->
<!--            <goals>-->
<!--              <goal>install-hooks</goal>-->
<!--            </goals>-->
<!--          </execution>-->
<!--          &lt;!&ndash; On Maven verify phase, fail if any file-->
<!--          (including unmodified) is badly formatted &ndash;&gt;-->
<!--          <execution>-->
<!--            <id>validate-code-format</id>-->
<!--            <goals>-->
<!--              <goal>validate-code-format</goal>-->
<!--            </goals>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.6.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>


</project>
